nav menu / avatar

--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
 
   background-color: #0d1217c8;
   background-size: cover;
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
   color: white;
 }
 
@@ -88,7 +88,8 @@ nav a {
 
   text-align: end;
   /* background-color: #fff; */
-  background-color: rgb(188, 188, 188);
+  background-color: #0b0c10e2;
+  /* background-color: #1f2833e4; */
   padding: 2rem;
   position: absolute;
   top: 40px;
@@ -100,6 +101,14 @@ nav a {
 }
 
 .nostalgia__navbar-menu_container p {
+  transition: 0.1s ease;
+  margin: 1rem 0;
+  padding: 10px 0;
+}
+.nostalgia__navbar-menu_container p:hover {
+  /* transition: 0.3s ease; */
+  border-bottom: 4px solid #66fcf1;
+  padding: 10px 0;
   margin: 1rem 0;
 }
 .nostalgia__navbar-menu_container-links-sign {
@@ -110,11 +119,6 @@ nav a {
   -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
     both;
   animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
-.nostalgia__navbar-date {
-  color: white;
-  font-size: 16px;
 }
 
 @-webkit-keyframes scale-up-center {
@@ -153,9 +157,9 @@ nav a {
   .nostalgia__navbar {
     padding: 0.75rem 1rem;
   }
-  .nostalgia__navbar-date {
+  /* .nostalgia__navbar-date {
     font-size: 14px;
-  }
+  } */
 }
 
 @media screen and (max-width: 550px) {
@@ -173,7 +177,7 @@ nav a {
   .nostalgia__navbar-menu_container-links-sign {
     display: block;
   }
-  .nostalgia__navbar-date {
+  /* .nostalgia__navbar-date {
     font-size: 12px;
-  }
+  } */
 } ;
